services/apps/shared/tenant-registration/k8s/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-registration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant-registration
  template:
    metadata:
      labels:
        app: tenant-registration
    spec:
      containers:
        - name: tenant-registration
          image: public.ecr.aws/o2b5n0j5/eks-saas-tenant-registration:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-registration-service
spec:
  selector:
    app: tenant-registration
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-registration-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: a6827acb0d6ef4172b966aa6ba3da833-2faefb68832aa130.elb.us-west-2.amazonaws.com
      http:
        paths:
          - backend:
              service:
                name: tenant-registration-service
                port:
                  number: 80
            path: /api/registration
            pathType: Prefix
